# myinit-rust

./: .gitignore  Cargo.toml  LICENSE
src/: archive.rs  config.rs  curly_modified.rs  main.rs  util.rs  var.rs
