[package]
name = "myinit-rust"
version = "0.1.0"
authors = ["shunf4 <shun1048576@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "^0.4"
yaml-rust = "^0.4.4"
getopts = "^0.2"
users = "^0.10.0"
colour = "^0.5.0"
indicatif = "^0.15.0"
console = "^0.11.2"
dialoguer = "^0.6.2"
log = "^0.4.11"
env_logger = "^0.7.1"
serde = { version = "^1.0", features = ["derive", "rc"] }
serde_yaml = "^0.8"
serde_json = "^1.0"
validator = "^0.10"
validator_derive = "^0.10"
lazy_static = "^1.4.0"
regex = "^1.3.9"
simple-error = "^0.2.2"
enum-as-inner = "^0.3.3"
dynfmt = { version = "^0.1.4", features = [] }
flate2 = "^1.0"
tempfile = "^3"
nix = "^0.18.0"